syntax = "proto3";
package cosmos.auth.v1;

import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";

service Query {
  rpc AccountInfo(QueryAccountInfoRequest) returns (QueryAccountInfoResponse);
}

message QueryAccountInfoRequest {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message QueryAccountInfoResponse {
  AccountInfo info = 1;
}

// AccountInfo
message AccountInfo {
  // address is the account address string.
  string              address_string = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // credential is a pubkey or other identifying credential such as an ADR 028 module account.
  google.protobuf.Any credential = 2;

  // account_number is the unique account number.
  uint64              account_number = 3;

  // sequence is the account sequence which increments with every transaction.
  uint64              sequence = 4;
}
